--- a/site/index.html
+++ b/site/index.html
@@ -1920,7 +1920,7 @@
 </div>
 <p><a href="//space.bilibili.com/3709626/channel/collectiondetail?sid=1422512" target="_blank">▶︎ 视频教程合集</span></a>
 <span> | </span>
-<a href="//ie.cx/luna-ai" target="_blank">📄 在线文档</span></a>
+<a href="/">📄 在线文档</span></a>
 <span> | </span>
 <a href="//github.com/Ikaros-521/AI-Vtuber" target="_blank">🍉 GitHub</span></a>
 <span> | </span>
