--- a/site/index.html
+++ b/site/index.html
@@ -2228,6 +2228,11 @@
     <img src="//img.shields.io/badge/python-3.10+-blue.svg" alt="python">
 </a></p>
 </div>
+<div class="admonition note inline end">
+<p class="admonition-title">网站样式正在修改</p>
+<p>非常感谢您对我们的网站的访问！我们非常重视您对网站的意见和建议，并且我们很愿意与您直接联系。</p>
+<p>如果您有任何修改意见或提供的建议，或者希望与我进行进一步的讨论，我们鼓励您直接与我联系。</p>
+</div>
 <div class="admonition quote">
 <p class="admonition-title">介绍</p>
 <p><code>Luna AI</code> 是一个由</p>
