--- a/site/index.html
+++ b/site/index.html
@@ -3429,9 +3429,16 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-11</p>
+<ul>
+<li>删除聊天页ctrl+c或z的程序退出功能</li>
+</ul>
+</li>
+<li>
 <p>2023-09-10</p>
 <ul>
 <li>新增 念弹幕功能，可以对直播间弹幕进行复读，更有针对性，试用助理场景（另外发现b站的用户名被加密了）</li>
+<li>修复GUI内置文档超链接过期问题</li>
 </ul>
 </li>
 <li>
