补充遗漏的服务端说明

--- a/site/index.html
+++ b/site/index.html
@@ -3220,6 +3220,7 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <p>应用程序 → Cookie → 复制 Cookie 中 __Secure-1PSID 对应的值。  </p>
 <h4 id="_40">文心一言</h4>
 <p>官网：<a href="//yiyan.baidu.com">yiyan.baidu.com</a>  </p>
+<p>服务端：<a href="//github.com/zhuweiyou/yiyan-api">yiyan-api</a>  </p>
 <p>cookie 获取方式：</p>
 <p>访问 <code>yiyan.baidu.com</code>，登录账号  </p>
 <p>键盘F12 打开开发者工具  </p>
