GUI缩短配置项长度，给右侧预留10%的空间，方便鼠标在此处停留使用滚轮功能。

--- a/site/index.html
+++ b/site/index.html
@@ -3221,6 +3221,7 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <h4 id="_40">文心一言</h4>
 <p>官网：<a href="//yiyan.baidu.com">yiyan.baidu.com</a>  </p>
 <p>服务端：<a href="//github.com/zhuweiyou/yiyan-api">yiyan-api</a>  </p>
+<p>下载yiyan-api源码，根据官方教程部署搭建运行即可。简述过程就是安装Node.js &gt;= 18，然后再源码项目文件夹内运行<code>npm install</code>，最后运行<code>npm start</code>即可。  </p>
 <p>cookie 获取方式：</p>
 <p>访问 <code>yiyan.baidu.com</code>，登录账号  </p>
 <p>键盘F12 打开开发者工具  </p>
@@ -3452,6 +3453,12 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>
+<p>2023-09-13</p>
+<ul>
+<li>GUI缩短配置项长度，给右侧预留10%的空间，方便鼠标在此处停留使用滚轮功能。</li>
+</ul>
+</li>
 <li>
 <p>2023-09-12</p>
 <ul>
