--- a/site/index.html
+++ b/site/index.html
@@ -3457,6 +3457,7 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <p>2023-09-13</p>
 <ul>
 <li>GUI缩短配置项长度，给右侧预留10%的空间，方便鼠标在此处停留使用滚轮功能。</li>
+<li>更新切分算法，没有最长字符的强制切分，读句子会丝滑，但是千万要断句啊，怕你电脑吃不消</li>
 </ul>
 </li>
 <li>
