--- a/site/index.html
+++ b/site/index.html
@@ -3454,6 +3454,18 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-16</p>
+<ul>
+<li>新增积分表，暂时只做了b站的签到部分功能，GUI未适配</li>
+</ul>
+</li>
+<li>
+<p>2023-09-14</p>
+<ul>
+<li>更新requirements_common.txt，解决aiohttp等版本冲突问题 —— vantang</li>
+</ul>
+</li>
+<li>
 <p>2023-09-13</p>
 <ul>
 <li>GUI缩短配置项长度，给右侧预留10%的空间，方便鼠标在此处停留使用滚轮功能。</li>
