录音页 新增录音按键` 数字1左边按键

--- a/site/index.html
+++ b/site/index.html
@@ -3456,6 +3456,12 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <li>
 <p>2023-09-16</p>
 <ul>
+<li>录音页 新增录音按键` 数字1左边按键</li>
+</ul>
+</li>
+<li>
+<p>2023-09-16</p>
+<ul>
 <li>新增积分表，暂时只做了b站的签到部分功能，GUI未适配</li>
 </ul>
 </li>
