--- a/site/index.html
+++ b/site/index.html
@@ -3454,6 +3454,12 @@ Proceed<span class="w"> </span><span class="o">(</span>Y/n<span class="o">)</spa
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-17</p>
+<ul>
+<li>后移web字幕打印机调用的位置，让其可以对其音频合成部分</li>
+</ul>
+</li>
+<li>
 <p>2023-09-16</p>
 <ul>
 <li>录音页 新增录音按键` 数字1左边按键</li>
