积分机制 新增查询功能，用户可以查询积分情况，GUI未适配；

--- a/site/index.html
+++ b/site/index.html
@@ -3455,6 +3455,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled checked/><span class="task-list-indicator"></span></label> 抖音关注事件可以触发关注感谢话术</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled checked/><span class="task-list-indicator"></span></label> 本地问答文本库支持动态变量功能</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled checked/><span class="task-list-indicator"></span></label> 兼容bert vits2</li>
+<li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> 支持礼物或者其他形式的键盘映射</li>
 </ul>
 <h2 id="_56">📝更新日志</h2>
 <details class="note">
@@ -3464,6 +3465,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-09-18</p>
 <ul>
 <li>积分机制 新增礼物和入场积分记录的实现，GUI未适配；默认配置修改。</li>
+<li>积分机制 新增查询功能，用户可以查询积分情况，GUI未适配；</li>
 </ul>
 </li>
 <li>
