--- a/site/index.html
+++ b/site/index.html
@@ -3464,6 +3464,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2023-09-18</p>
 <ul>
+<li>新增游戏demo例程</li>
+<li>修改默认配置关闭积分机制</li>
+</ul>
+</li>
+<li>
+<p>2023-09-18</p>
+<ul>
 <li>积分机制 新增礼物和入场积分记录的实现，GUI未适配；默认配置修改。</li>
 <li>积分机制 新增查询功能，用户可以查询积分情况，GUI未适配；</li>
 </ul>
