智谱回复部分如果存在多\情况，则会删除重复的\仅保留一个

--- a/site/index.html
+++ b/site/index.html
@@ -3462,6 +3462,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-20</p>
+<ul>
+<li>智谱回复部分如果存在多\情况，则会删除重复的\仅保留一个</li>
+</ul>
+</li>
+<li>
 <p>2023-09-19</p>
 <ul>
 <li>新增游戏demo例程</li>
