--- a/site/index.html
+++ b/site/index.html
@@ -3462,6 +3462,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-21</p>
+<ul>
+<li>弹幕处理新增全标点符号的弹幕过滤 </li>
+<li>追加几个本地问答，让ai有所b数；更新投资人信息 </li>
+<li>更新违禁词库</li>
+</ul>
+</li>
+<li>
 <p>2023-09-20</p>
 <ul>
 <li>智谱回复部分如果存在多\情况，则会删除重复的\仅保留一个</li>
