--- a/site/index.html
+++ b/site/index.html
@@ -3462,6 +3462,19 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-23</p>
+<ul>
+<li>新增积分页的GUI实现，并且优化了UI部分动态加载数据的源码</li>
+</ul>
+</li>
+<li>
+<p>2023-09-22</p>
+<ul>
+<li>新增积分页，积分页暂时只完成了签到板块的显示功能</li>
+<li>完成积分机制目前所有后端功能</li>
+</ul>
+</li>
+<li>
 <p>2023-09-21</p>
 <ul>
 <li>弹幕处理新增全标点符号的弹幕过滤 </li>
