--- a/site/index.html
+++ b/site/index.html
@@ -3559,6 +3559,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>新增积分页的GUI实现，并且优化了UI部分动态加载数据的源码</li>
 <li>新增 通义千问 的接入</li>
+<li>GUI的下拉选择框支持编辑，可以填入关键词进行直接的搜索</li>
 </ul>
 </li>
 <li>
