--- a/site/index.html
+++ b/site/index.html
@@ -3555,6 +3555,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-09-26</p>
+<ul>
+<li>修复通义千问必须配置文件的bug</li>
+</ul>
+</li>
+<li>
 <p>2023-09-23</p>
 <ul>
 <li>新增积分页的GUI实现，并且优化了UI部分动态加载数据的源码</li>
