--- a/site/index.html
+++ b/site/index.html
@@ -3559,6 +3559,24 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-07</p>
+<ul>
+<li>智谱AI新增CharacterGLM模型</li>
+</ul>
+</li>
+<li>
+<p>2023-10-06</p>
+<ul>
+<li>webui开发进行中...进度预估30%</li>
+</ul>
+</li>
+<li>
+<p>2023-10-01</p>
+<ul>
+<li>音频部分相关的优化（音频输出路径自定义等）</li>
+</ul>
+</li>
+<li>
 <p>2023-09-26</p>
 <ul>
 <li>修复通义千问必须配置文件的bug</li>
