--- a/site/index.html
+++ b/site/index.html
@@ -3553,6 +3553,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled checked/><span class="task-list-indicator"></span></label> 兼容bert vits2</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> 支持礼物或者其他形式的键盘映射</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> webui开发</li>
+<li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> 闲时任务功能（适用于自言自语）</li>
 </ul>
 <h2 id="_57">📝更新日志</h2>
 <details class="note">
