--- a/site/index.html
+++ b/site/index.html
@@ -3560,6 +3560,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-09</p>
+<ul>
+<li>新增按键映射配置，执行晚于其他3个模式（GUI未适配）</li>
+</ul>
+</li>
+<li>
 <p>2023-10-07</p>
 <ul>
 <li>智谱AI新增CharacterGLM模型</li>
