修复文案音频合成bug补充genshinvoice的兼容（不确保没新bug）

--- a/site/index.html
+++ b/site/index.html
@@ -3564,6 +3564,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>新增按键映射配置，执行晚于其他3个模式（GUI未适配）</li>
 <li>按键映射功能，新增配置项-起始命令（GUI未适配）</li>
+<li>修复文案音频合成bug补充genshinvoice的兼容（不确保没新bug）</li>
 </ul>
 </li>
 <li>
