--- a/site/index.html
+++ b/site/index.html
@@ -3563,6 +3563,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-10-10</p>
 <ul>
 <li>补充遗漏的pyautogui库</li>
+<li>按键映射增加日志输出</li>
+<li>webui新增答谢、按键映射板块的配置功能</li>
 </ul>
 </li>
 <li>
