--- a/site/index.html
+++ b/site/index.html
@@ -3580,6 +3580,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-11</p>
+<ul>
+<li>新增虚拟身体部分 对接xuniren项目</li>
+</ul>
+</li>
+<li>
 <p>2023-10-10</p>
 <ul>
 <li>补充遗漏的pyautogui库</li>
