--- a/site/index.html
+++ b/site/index.html
@@ -3583,6 +3583,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-10-12</p>
 <ul>
 <li>补充遗漏的nicegui依赖</li>
+<li>修改按键映射的函数调用为按下释放，配置结构调整为单个按键多行配置的形式</li>
 </ul>
 </li>
 <li>
