--- a/site/index.html
+++ b/site/index.html
@@ -3580,6 +3580,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-13</p>
+<ul>
+<li>修复平台配置bug</li>
+<li>新增音频随机变速、Live2D、定时任务的配置项</li>
+</ul>
+</li>
+<li>
 <p>2023-10-12</p>
 <ul>
 <li>补充遗漏的nicegui依赖</li>
