--- a/site/index.html
+++ b/site/index.html
@@ -3609,6 +3609,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-10-15</p>
 <ul>
 <li>智谱AI新增无用内容删除，让回复更加正常点，不用把相关描述也输出</li>
+<li>提供多按键映射的配置实例；修复多按键映射bug</li>
 </ul>
 </li>
 <li>
