--- a/site/index.html
+++ b/site/index.html
@@ -3627,6 +3627,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>智谱AI新增无用内容删除，让回复更加正常点，不用把相关描述也输出</li>
 <li>提供多按键映射的配置实例；修复多按键映射bug</li>
 <li>GUI增加按键映射配置板块；修改相似度配置项为字符串类型</li>
+<li>webui新增文案页部分配置功能</li>
 </ul>
 </li>
 <li>
