--- a/site/index.html
+++ b/site/index.html
@@ -3622,6 +3622,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-17</p>
+<ul>
+<li>webui补充积分页配置功能（修复部分bug）</li>
+</ul>
+</li>
+<li>
 <p>2023-10-15</p>
 <ul>
 <li>智谱AI新增无用内容删除，让回复更加正常点，不用把相关描述也输出</li>
