--- a/site/index.html
+++ b/site/index.html
@@ -3622,6 +3622,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-18</p>
+<ul>
+<li>webui新增部分聊天页配置功能</li>
+<li>修改watchfiles日志等级</li>
+</ul>
+</li>
+<li>
 <p>2023-10-17</p>
 <ul>
 <li>webui补充积分页配置功能（修复部分bug）</li>
