--- a/site/index.html
+++ b/site/index.html
@@ -3626,6 +3626,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>webui新增部分聊天页配置功能</li>
 <li>修改watchfiles日志等级</li>
+<li>webui增加聊天输入框及发送按钮</li>
+<li>修复webui运行都是b站的问题</li>
 </ul>
 </li>
 <li>
