优化webui的UI样式

--- a/site/index.html
+++ b/site/index.html
@@ -3628,6 +3628,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>修改watchfiles日志等级</li>
 <li>webui增加聊天输入框及发送按钮</li>
 <li>修复webui运行都是b站的问题</li>
+<li>优化webui的UI样式</li>
 </ul>
 </li>
 <li>
