--- a/site/index.html
+++ b/site/index.html
@@ -3622,6 +3622,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-20</p>
+<ul>
+<li>修复本地问答音频库触发后，会合成多余内容的bug</li>
+<li>提高httpx日志等级</li>
+<li>接入 YouTube</li>
+</ul>
+</li>
+<li>
 <p>2023-10-18</p>
 <ul>
 <li>webui新增部分聊天页配置功能</li>
