修复文档超链接错误问题

--- a/site/index.html
+++ b/site/index.html
@@ -3527,7 +3527,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>项目地址：<a href="//github.com/Ikaros-521/captions_printer">captions_printer</a></p>
 <p>具体使用参考项目文档即可。  </p>
 <h4 id="_45">按键映射</h4>
-<p>pyautogui官方文档：<a href="pyautogui.readthedocs.io/en/latest/keyboard.html#keyboard-keys">传送门，官方对按键名的定义</a>  </p>
+<p>pyautogui官方文档：<a href="//pyautogui.readthedocs.io/en/latest/keyboard.html#keyboard-keys">传送门，官方对按键名的定义</a>  </p>
 <h2 id="_46">🀅开发&amp;项目相关</h2>
 <h3 id="_47">简易流程图</h3>
 <p><img alt="image" src="static/images/luna-ai/chart.jpg" /></p>
