--- a/site/index.html
+++ b/site/index.html
@@ -3693,6 +3693,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>修复本地问答音频库触发后，会合成多余内容的bug</li>
 <li>提高httpx日志等级</li>
 <li>接入 YouTube</li>
+<li>修复webui，语音合成配置不生效bug</li>
 </ul>
 </li>
 <li>
