--- a/site/index.html
+++ b/site/index.html
@@ -3759,6 +3759,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-10-22</p>
 <ul>
 <li>修复斗鱼监听失败bug</li>
+<li>b站登录新增2种登录方式</li>
 </ul>
 </li>
 <li>
