--- a/site/index.html
+++ b/site/index.html
@@ -3767,6 +3767,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-24</p>
+<ul>
+<li>修复b站监听方案2的用户名获取失败bug</li>
+</ul>
+</li>
+<li>
 <p>2023-10-22</p>
 <ul>
 <li>修复斗鱼监听失败bug</li>
