webui增加登录页；美化UI

--- a/site/index.html
+++ b/site/index.html
@@ -3770,6 +3770,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-10-24</p>
 <ul>
 <li>修复b站监听方案2的用户名获取失败bug</li>
+<li>webui增加登录页；美化UI</li>
 </ul>
 </li>
 <li>
