webui新增登录页使能，咱本地使用不需要登录！

--- a/site/index.html
+++ b/site/index.html
@@ -3772,6 +3772,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>修复b站监听方案2的用户名获取失败bug</li>
 <li>webui增加登录页；美化UI</li>
 <li>补充遗漏的webui登录配置</li>
+<li>webui新增登录页使能，咱本地使用不需要登录！</li>
 </ul>
 </li>
 <li>
