更新合作伙伴

--- a/site/index.html
+++ b/site/index.html
@@ -4530,7 +4530,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <h3 id="_63">💸投资方</h3>
 <p><img alt="image" src="static/images/luna-ai/invest.png" /></p>
 <h3 id="_64">合作伙伴</h3>
-<p>智来星球：<a href="//m.zlxqai.com">m.zlxqai.com</a> <code>提供GPT、AI绘图服务</code></p>
+<p>智来星球：<a href="//m.zlxqai.com">m.zlxqai.com</a> <code>提供GPT、AI绘图服务</code>  </p>
+<p>青椒云：<a href="//account.qingjiaocloud.com/signin?inviteCode=4Q92ROBQ">qingjiaocloud.com</a> <code>AIGC 高性能云桌面</code>  </p>
 <h3 id="_65">🙌赞助</h3>
 <p><img alt="image" src="static/images/luna-ai/alipay.png" width="200" />
 <img alt="image" src="static/images/luna-ai/wechatpay.png" width="200" /></p>
