--- a/site/index.html
+++ b/site/index.html
@@ -2455,7 +2455,7 @@
 <p class="admonition-title">介绍</p>
 <p><code>Luna AI</code> 是一个由</p>
 <p><code>ChatterBot / GPT / Claude / langchain 本地 or 云端 / chatglm / text-generation-webui / 讯飞星火 / 智谱AI / 谷歌Bard / 文心一言 / 通义千问</code></p>
-<p>做为 <code>大脑</code> 驱动的虚拟主播 <code>Live2D / Vtube Studio / UE5 + Audio2Face / xuniren</code> ，可以在 <code>Bilibili / 抖音 / 快手 / 斗鱼</code> 直播中与观众实时互动 或者 直接在本地和您进行聊天</p>
+<p>做为 <code>大脑</code> 驱动的虚拟主播 <code>Live2D / Vtube Studio / UE5 + Audio2Face / xuniren</code> ，可以在 <code>Bilibili / 抖音 / 快手 / 斗鱼 / YouTube / twitch</code> 直播中与观众实时互动 或者 直接在本地和您进行聊天</p>
 <p>它使用自然语言处理和文本转语音技术 <code>Edge-TTS / VITS-Fast / elevenlabs / bark-gui / VALL-E-X</code> 生成对观众问题的回答并可以通过 <code>so-vits-svc / DDSP-SVC</code> 变声</p>
 <p>另外还可以通过特定指令协同 <code>Stable Diffusion</code> 进行画图展示。并且可以自定义文案进行循环播放</p>
 </div>
