新增更简易的流程图

--- a/site/index.html
+++ b/site/index.html
@@ -3658,6 +3658,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>pyautogui官方文档：<a href="//pyautogui.readthedocs.io/en/latest/keyboard.html#keyboard-keys">传送门，官方对按键名的定义</a>  </p>
 <h2 id="_48">🀅开发&amp;项目相关</h2>
 <h3 id="_49">简易流程图</h3>
+<p><img alt="image" src="static/images/luna-ai/simple_flowchart.png" /></p>
 <p><img alt="image" src="static/images/luna-ai/chart.jpg" /></p>
 <details class="note">
 <summary>Note</summary>
