--- a/site/index.html
+++ b/site/index.html
@@ -3768,6 +3768,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-26</p>
+<ul>
+<li>新增虚拟身体配置页面</li>
+<li>修改webui图标和标题，拉出关键传参</li>
+</ul>
+</li>
+<li>
 <p>2023-10-25</p>
 <ul>
 <li>webui删除遗漏的登录页按钮</li>
