--- a/site/index.html
+++ b/site/index.html
@@ -3772,6 +3772,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>新增虚拟身体配置页面</li>
 <li>修改webui图标和标题，拉出关键传参</li>
+<li>webui新增开关灯功能</li>
 </ul>
 </li>
 <li>
