--- a/site/index.html
+++ b/site/index.html
@@ -3769,6 +3769,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-27</p>
+<ul>
+<li>支持智谱新模型32k</li>
+<li>webui补充虚拟身体配置项</li>
+<li>删减部分违禁词</li>
+</ul>
+</li>
+<li>
 <p>2023-10-26</p>
 <ul>
 <li>新增虚拟身体配置页面</li>
