--- a/site/index.html
+++ b/site/index.html
@@ -3769,6 +3769,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-29</p>
+<ul>
+<li>删除部分Live2D模型</li>
+</ul>
+</li>
+<li>
 <p>2023-10-28</p>
 <ul>
 <li>优化webui文本错误部分及UI排版</li>
