twitch 注意：如果你的token和你监听的直播间是同一个账号，那会自动过滤你自己发送的弹幕

--- a/site/index.html
+++ b/site/index.html
@@ -3361,6 +3361,7 @@ playwright install
 <p>接口源自官方接口: <a href="//irc.chat.twitch.tv">irc.chat.twitch.tv</a>  </p>
 <p>使用时需要配置token、用户名、http代理等  </p>
 <p>其中token获取方式，通过访问<a href="//twitchapps.com/tmi/">https://twitchapps.com/tmi/</a>，登录twitch账号授权后即可获取返回的token:<code>oauth:xxxxx</code>  </p>
+<p>！！！注意：如果你的token和你监听的直播间是同一个账号，那会自动过滤你自己发送的弹幕！！！  </p>
 <h4 id="_39">聊天模式 百度</h4>
 <p>新用户+实名认证后有半年的免费额度可以使用。  </p>
 <p>申请地址：<a href="//console.bce.baidu.com/ai/#/ai/speech/overview/index">console.bce.baidu.com/ai/#/ai/speech/overview/index <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"/></svg></span></a></p>
