--- a/site/index.html
+++ b/site/index.html
@@ -3770,6 +3770,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-10-31</p>
+<ul>
+<li>升级星火库到1.5.0</li>
+<li>修订违禁词</li>
+<li>按键映射新增配置项 类型，可支持弹幕或回复触发</li>
+</ul>
+</li>
+<li>
 <p>2023-10-29</p>
 <ul>
 <li>删除部分Live2D模型</li>
