--- a/site/index.html
+++ b/site/index.html
@@ -3775,6 +3775,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>升级星火库到1.5.0</li>
 <li>修订违禁词</li>
 <li>按键映射新增配置项 类型，可支持弹幕或回复触发</li>
+<li>按键映射 回复类型下，其触发规则改为 回复内容包含关键词即触发</li>
 </ul>
 </li>
 <li>
