--- a/site/index.html
+++ b/site/index.html
@@ -3813,6 +3813,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-1</p>
+<ul>
+<li>讯飞星火新增版本配置项，用于选择具体API调用版本</li>
+<li>删减违禁词</li>
+<li>新增audio_player的对接，内测阶段，bug较多，不建议使用</li>
+</ul>
+</li>
+<li>
 <p>2023-10-31</p>
 <ul>
 <li>升级星火库到1.5.0</li>
