--- a/site/index.html
+++ b/site/index.html
@@ -3813,7 +3813,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
-<p>2023-11-1</p>
+<p>2023-11-02</p>
+<ul>
+<li>audio_player类到单独文件中，补充audio_player接口的调用函数</li>
+</ul>
+</li>
+<li>
+<p>2023-11-01</p>
 <ul>
 <li>讯飞星火新增版本配置项，用于选择具体API调用版本</li>
 <li>删减违禁词</li>
