修改点歌模式发送路径为绝对路径

--- a/site/index.html
+++ b/site/index.html
@@ -3813,6 +3813,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-03</p>
+<ul>
+<li>修改点歌模式发送路径为绝对路径</li>
+</ul>
+</li>
+<li>
 <p>2023-11-02</p>
 <ul>
 <li>audio_player类到单独文件中，补充audio_player接口的调用函数</li>
