更新投资人；补充视频教程

--- a/site/index.html
+++ b/site/index.html
@@ -3692,9 +3692,11 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>官方仓库：<a href="//github.com/AUTOMATIC1111/stable-diffusion-webui">stable-diffusion-webui</a>  </p>
 <p>整合包：<a href="//www.bilibili.com/video/BV1iM4y1y7oA">【AI绘画】Stable Diffusion整合包v4.2发布！全新加速 解压即用 防爆显存 三分钟入门AI绘画 ☆可更新 ☆训练 ☆汉化</a></p>
 <p>启动API模式，填写相关配置即可接入。  </p>
+<p>视频教程：<a href="//www.bilibili.com/video/BV1tV411u79T/">BV1tV411u79T</a>  </p>
 <h4 id="web">web字幕打印机</h4>
-<p>项目地址：<a href="//github.com/Ikaros-521/captions_printer">captions_printer</a></p>
+<p>项目地址：<a href="//github.com/Ikaros-521/captions_printer">captions_printer</a>  </p>
 <p>具体使用参考项目文档即可。  </p>
+<p>视频教程：<a href="//www.bilibili.com/video/BV13h4y1e7z8/">BV13h4y1e7z8</a>  </p>
 <h4 id="_47">按键映射</h4>
 <p>pyautogui官方文档：<a href="//pyautogui.readthedocs.io/en/latest/keyboard.html#keyboard-keys">传送门，官方对按键名的定义</a>  </p>
 <h2 id="_48">🀅开发&amp;项目相关</h2>
