--- a/site/index.html
+++ b/site/index.html
@@ -3836,6 +3836,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-06</p>
+<ul>
+<li>修复audio_player模式下，取消点歌失效的bug</li>
+<li>通义千问不再适用</li>
+</ul>
+</li>
+<li>
 <p>2023-11-03</p>
 <ul>
 <li>修改点歌模式发送路径为绝对路径</li>
