--- a/site/index.html
+++ b/site/index.html
@@ -3836,6 +3836,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-07</p>
+<ul>
+<li>新增纯特殊字符和空格组成的文本的合成过滤，避免tts合成错误音频</li>
+<li>文案页 文案合成 vits传参补充遗漏的sdp_radio</li>
+<li>删减违禁词</li>
+</ul>
+</li>
+<li>
 <p>2023-11-06</p>
 <ul>
 <li>修复audio_player模式下，取消点歌失效的bug</li>
