优化chatgpt特殊情况下token一直超长问题,2次都超长，直接清空上下文

--- a/site/index.html
+++ b/site/index.html
@@ -3841,7 +3841,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>新增纯特殊字符和空格组成的文本的合成过滤，避免tts合成错误音频</li>
 <li>文案页 文案合成 vits传参补充遗漏的sdp_radio</li>
 <li>删减违禁词</li>
-<li>优化chatgpt特殊情况下token一直超长问题</li>
+<li>优化chatgpt特殊情况下token一直超长问题,2次都超长，直接清空上下文</li>
 </ul>
 </li>
 <li>
