新增闲时任务功能（UI未适配）

--- a/site/index.html
+++ b/site/index.html
@@ -3828,7 +3828,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> Edge-TTS在合成音频时会出现合成成功但是系统找不到文件的bug</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> 支持礼物或者其他形式的键盘映射</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> webui开发</li>
-<li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled/><span class="task-list-indicator"></span></label> 闲时任务功能（适用于自言自语）</li>
+<li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled checked/><span class="task-list-indicator"></span></label> 闲时任务功能（适用于自言自语）</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox" disabled checked/><span class="task-list-indicator"></span></label> 输出音频自定义输出设备</li>
 </ul>
 <h2 id="_60">📝更新日志</h2>
@@ -3843,6 +3843,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>删减违禁词</li>
 <li>优化chatgpt特殊情况下token一直超长问题,2次都超长，直接清空上下文</li>
 <li>增加伊卡洛斯本地问答数据</li>
+<li>新增闲时任务功能（UI未适配）</li>
 </ul>
 </li>
 <li>
