闲时任务-本地音频 传递的内容改为文件名，而非完整路径

--- a/site/index.html
+++ b/site/index.html
@@ -3844,6 +3844,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>优化chatgpt特殊情况下token一直超长问题,2次都超长，直接清空上下文</li>
 <li>增加伊卡洛斯本地问答数据</li>
 <li>新增闲时任务功能（UI未适配）</li>
+<li>闲时任务-本地音频 传递的内容改为文件名，而非完整路径</li>
 </ul>
 </li>
 <li>
