更新视频教程

--- a/site/index.html
+++ b/site/index.html
@@ -3495,6 +3495,7 @@ playwright install
 <h4 id="chatglm">ChatGLM</h4>
 <p>官方仓库：<a href="//github.com/THUDM/ChatGLM-6B">ChatGLM-6B</a></p>
 <p>整合包：<a href="//www.bilibili.com/video/BV1E24y1u7Go">【ChatGLM】本地版ChatGPT？6G显存可用！ChatGLM-6B 清华开源模型一键包发布 可更新</a>  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1NN411a7zG">【AI主播-功能篇】ChatGLM如何接入？上下文记忆~ 不需魔法，本地跑，省钱了喵~</a>  </p>
 <p>运行 <code>api.py</code> ，然后配置相关信息接入本项目。</p>
 <div class="admonition note">
 <p class="admonition-title">参考</p>
@@ -3508,6 +3509,7 @@ playwright install
 <h5 id="chatglm3">ChatGLM3</h5>
 <p>官方仓库：<a href="//github.com/THUDM/ChatGLM3">ChatGLM3</a>  </p>
 <p>整合包：<a href="https://pan.quark.cn/s/c2ded75100ac">https://pan.quark.cn/s/c2ded75100ac</a>  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1M94y137h4">【AI主播-功能篇】接入ChatGLM3，含整合包，看看有没有提升（</a>  </p>
 <p>运行 <code>1.运行api.bat</code> ，然后配置相关信息接入本项目（聊天类型：<code>ChatGPT/闻达</code>，API地址：<code>http://localhost:8000/v1</code>，模型：<code>chatglm3-6b</code>）。  </p>
 <p>!!! openai_api.py "参考"</p>
 <pre><code>```python
