--- a/site/index.html
+++ b/site/index.html
@@ -3887,6 +3887,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>增加伊卡洛斯本地问答数据</li>
 <li>新增闲时任务功能（UI未适配）</li>
 <li>闲时任务-本地音频 传递的内容改为文件名，而非完整路径</li>
+<li>修复文案页-tts用vits时，无法合成文案音频的bug</li>
 </ul>
 </li>
 <li>
