--- a/site/index.html
+++ b/site/index.html
@@ -3878,6 +3878,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-09</p>
+<ul>
+<li>对闲时任务的闲时时间强制转型为int</li>
+</ul>
+</li>
+<li>
 <p>2023-11-07</p>
 <ul>
 <li>新增纯特殊字符和空格组成的文本的合成过滤，避免tts合成错误音频</li>
