--- a/site/index.html
+++ b/site/index.html
@@ -3881,6 +3881,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-09</p>
 <ul>
 <li>对闲时任务的闲时时间强制转型为int</li>
+<li>新增OpenAI TTS接入</li>
+<li>删减违禁词</li>
 </ul>
 </li>
 <li>
