--- a/site/index.html
+++ b/site/index.html
@@ -3881,6 +3881,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-10</p>
 <ul>
 <li>补充GUI遗漏的OpenAI TTS配置</li>
+<li>补充遗漏的依赖</li>
 </ul>
 </li>
 <li>
