--- a/site/index.html
+++ b/site/index.html
@@ -3882,6 +3882,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>补充GUI遗漏的OpenAI TTS配置</li>
 <li>补充遗漏的依赖</li>
+<li>webui新增 页面配置页，暂时支持设置UI主题</li>
 </ul>
 </li>
 <li>
