--- a/site/index.html
+++ b/site/index.html
@@ -3884,6 +3884,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>补充遗漏的依赖</li>
 <li>webui新增 页面配置页，暂时支持设置UI主题</li>
 <li>优化webui提示框</li>
+<li>TTS新增tts.ai-lab.top的接入（webui已适配）</li>
 </ul>
 </li>
 <li>
