--- a/site/index.html
+++ b/site/index.html
@@ -3878,6 +3878,15 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-11</p>
+<ul>
+<li>twitch增加重连机制和多次失败停止运行机制</li>
+<li>gpt默认token提升到4096</li>
+<li>webui使用linux兼容路径语法</li>
+<li>bilibili2 cookie问题bug修复</li>
+</ul>
+</li>
+<li>
 <p>2023-11-10</p>
 <ul>
 <li>补充GUI遗漏的OpenAI TTS配置</li>
