优化闲时任务日志输出内容

--- a/site/index.html
+++ b/site/index.html
@@ -3906,6 +3906,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>gpt默认token提升到4096</li>
 <li>webui使用linux兼容路径语法</li>
 <li>bilibili2 cookie问题bug修复</li>
+<li>优化闲时任务日志输出内容</li>
 </ul>
 </li>
 <li>
