--- a/site/index.html
+++ b/site/index.html
@@ -3900,6 +3900,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-12</p>
+<ul>
+<li>修复webui闲时任务日志bug</li>
+<li>webui重启前先停止程序</li>
+</ul>
+</li>
+<li>
 <p>2023-11-11</p>
 <ul>
 <li>twitch增加重连机制和多次失败停止运行机制</li>
