文案机制增加自动播放功能，至此，webui开发已完全覆盖pyqt，开始推进废弃pyqt计划

--- a/site/index.html
+++ b/site/index.html
@@ -3904,6 +3904,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>修复webui闲时任务日志bug</li>
 <li>webui重启前先停止程序</li>
+<li>文案机制增加自动播放功能，至此，webui开发已完全覆盖pyqt，开始推进废弃pyqt计划</li>
 </ul>
 </li>
 <li>
