--- a/site/index.html
+++ b/site/index.html
@@ -3900,6 +3900,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-13</p>
+<ul>
+<li>新增 unity第三方项目对接，将LLM等响应数据传给HTTP中转站（可以用于对接其他项目使用）</li>
+<li>恢复genshinvoice的API调用</li>
+</ul>
+</li>
+<li>
 <p>2023-11-12</p>
 <ul>
 <li>修复webui闲时任务日志bug</li>
