--- a/site/index.html
+++ b/site/index.html
@@ -3905,6 +3905,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>新增 unity第三方项目对接，将LLM等响应数据传给HTTP中转站（可以用于对接其他项目使用）</li>
 <li>恢复genshinvoice的API调用</li>
 <li>移动unity对接的启用方式到 虚拟身体 配置项</li>
+<li>修复vits不能切换类型的bug</li>
+<li>默认不启用webui的登录功能</li>
 </ul>
 </li>
 <li>
