--- a/site/index.html
+++ b/site/index.html
@@ -3906,6 +3906,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-14</p>
 <ul>
 <li>禁用文案的自动播放</li>
+<li>gpt新增gpt-4-1106-preview</li>
+<li>哔哩哔哩方案2新增开放平台对接，使用官方API进行监听，应该是最稳定方案了</li>
 </ul>
 </li>
 <li>
