--- a/site/index.html
+++ b/site/index.html
@@ -3909,6 +3909,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>gpt新增gpt-4-1106-preview</li>
 <li>哔哩哔哩方案2新增开放平台对接，使用官方API进行监听，应该是最稳定方案了</li>
 <li>音频合成后的路径统一为绝对路径，稳妥点</li>
+<li>不在对PyQt进行兼容！！！</li>
+<li>新增翻译功能，暂时接入百度翻译API，可以配置弹幕或回复内容翻译</li>
 </ul>
 </li>
 <li>
