--- a/site/index.html
+++ b/site/index.html
@@ -3903,6 +3903,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-15</p>
+<ul>
+<li>修复百度翻译配置读取错误问题</li>
+</ul>
+</li>
+<li>
 <p>2023-11-14</p>
 <ul>
 <li>禁用文案的自动播放</li>
