接入 睿声AI（新的在线TTS）

--- a/site/index.html
+++ b/site/index.html
@@ -3906,6 +3906,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-15</p>
 <ul>
 <li>修复百度翻译配置读取错误问题</li>
+<li>接入 睿声AI（新的在线TTS）</li>
 </ul>
 </li>
 <li>
