--- a/site/index.html
+++ b/site/index.html
@@ -3429,6 +3429,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-16</p>
+<ul>
+<li>更新logo</li>
+</ul>
+</li>
+<li>
 <p>2023-11-15</p>
 <ul>
 <li>修复百度翻译配置读取错误问题</li>
