--- a/site/index.html
+++ b/site/index.html
@@ -3432,6 +3432,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-16</p>
 <ul>
 <li>更新logo</li>
+<li>修复pyqt b站配置项错误问题</li>
+<li>webui 文档页直接内嵌在线文档，方便用户直接查看</li>
 </ul>
 </li>
 <li>
