--- a/site/index.html
+++ b/site/index.html
@@ -3436,6 +3436,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>更新logo</li>
 <li>修复pyqt b站配置项错误问题</li>
 <li>webui 文档页直接内嵌在线文档，方便用户直接查看</li>
+<li>webui补充遗漏的 点歌模式 配置</li>
 </ul>
 </li>
 <li>
