--- a/site/index.html
+++ b/site/index.html
@@ -3431,6 +3431,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-17</p>
+<ul>
+<li>unity对接新增密码</li>
+<li>着手开发异常报警功能</li>
+</ul>
+</li>
+<li>
 <p>2023-11-16</p>
 <ul>
 <li>更新logo</li>
@@ -3438,6 +3445,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>webui 文档页直接内嵌在线文档，方便用户直接查看</li>
 <li>webui补充遗漏的 点歌模式 配置</li>
 <li>紧急关闭webui公网访问</li>
+<li>修复 webui 聊天页 直接复读 bug</li>
 </ul>
 </li>
 <li>
