--- a/site/index.html
+++ b/site/index.html
@@ -3435,6 +3435,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>unity对接新增密码</li>
 <li>着手开发异常报警功能</li>
+<li>修复webui 过滤配置 文字描述错误问题</li>
 </ul>
 </li>
 <li>
