优化webui配置项描述

--- a/site/index.html
+++ b/site/index.html
@@ -3433,6 +3433,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-18</p>
+<ul>
+<li>优化webui配置项描述</li>
+</ul>
+</li>
+<li>
 <p>2023-11-17</p>
 <ul>
 <li>unity对接新增密码</li>
