--- a/site/index.html
+++ b/site/index.html
@@ -3436,6 +3436,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-18</p>
 <ul>
 <li>优化webui配置项描述</li>
+<li>按键映射改为实际使用情况下的配置情况</li>
+<li>webui补充遗漏的内置Live2D启动功能</li>
 </ul>
 </li>
 <li>
