修复webui 聊天页 直接复读无法使用的bug

--- a/site/index.html
+++ b/site/index.html
@@ -3438,6 +3438,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>优化webui配置项描述</li>
 <li>按键映射改为实际使用情况下的配置情况</li>
 <li>webui补充遗漏的内置Live2D启动功能</li>
+<li>修复webui 聊天页 直接复读无法使用的bug</li>
 </ul>
 </li>
 <li>
