--- a/site/index.html
+++ b/site/index.html
@@ -3439,6 +3439,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>按键映射改为实际使用情况下的配置情况</li>
 <li>webui补充遗漏的内置Live2D启动功能</li>
 <li>修复webui 聊天页 直接复读无法使用的bug</li>
+<li>chatgpt增加请求超时时间，默认30s</li>
 </ul>
 </li>
 <li>
