修复按键映射描述错误问题

--- a/site/index.html
+++ b/site/index.html
@@ -3440,6 +3440,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>webui补充遗漏的内置Live2D启动功能</li>
 <li>修复webui 聊天页 直接复读无法使用的bug</li>
 <li>chatgpt增加请求超时时间，默认30s</li>
+<li>修复按键映射描述错误问题</li>
 </ul>
 </li>
 <li>
