--- a/site/index.html
+++ b/site/index.html
@@ -3441,6 +3441,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>修复webui 聊天页 直接复读无法使用的bug</li>
 <li>chatgpt增加请求超时时间，默认30s</li>
 <li>修复按键映射描述错误问题</li>
+<li>平台程序新增flask，创建http接口，修改webui的聊天页文本框为http请求对接的形式，修复了聊天页发送内容实例化2次My_handle类造成双重音频的问题</li>
 </ul>
 </li>
 <li>
