--- a/site/index.html
+++ b/site/index.html
@@ -3433,15 +3433,26 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-20</p>
+<ul>
+<li>补充遗漏的依赖</li>
+</ul>
+</li>
+<li>
+<p>2023-11-19</p>
+<ul>
+<li>chatgpt增加请求超时时间，默认30s</li>
+<li>修复按键映射描述错误问题</li>
+<li>平台程序新增flask，创建http接口，修改webui的聊天页文本框为http请求对接的形式，修复了聊天页发送内容实例化2次My_handle类造成双重音频的问题</li>
+</ul>
+</li>
+<li>
 <p>2023-11-18</p>
 <ul>
 <li>优化webui配置项描述</li>
 <li>按键映射改为实际使用情况下的配置情况</li>
 <li>webui补充遗漏的内置Live2D启动功能</li>
 <li>修复webui 聊天页 直接复读无法使用的bug</li>
-<li>chatgpt增加请求超时时间，默认30s</li>
-<li>修复按键映射描述错误问题</li>
-<li>平台程序新增flask，创建http接口，修改webui的聊天页文本框为http请求对接的形式，修复了聊天页发送内容实例化2次My_handle类造成双重音频的问题</li>
 </ul>
 </li>
 <li>
