--- a/site/index.html
+++ b/site/index.html
@@ -3436,6 +3436,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-20</p>
 <ul>
 <li>补充遗漏的依赖</li>
+<li>修复talk遗漏的全局变量</li>
 </ul>
 </li>
 <li>
