--- a/site/index.html
+++ b/site/index.html
@@ -3433,6 +3433,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-21</p>
+<ul>
+<li>新增备份配置和数据脚本，懒人包脚本位于Scripts文件夹内</li>
+</ul>
+</li>
+<li>
 <p>2023-11-20</p>
 <ul>
 <li>补充遗漏的依赖</li>
