--- a/site/index.html
+++ b/site/index.html
@@ -3450,6 +3450,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-22</p>
+<ul>
+<li>修复webui 智谱AI部分配置无法保存的bug</li>
+</ul>
+</li>
+<li>
 <p>2023-11-21</p>
 <ul>
 <li>新增备份配置和数据脚本，懒人包脚本位于Scripts文件夹内</li>
