点歌模式命令改为多命令形式

--- a/site/index.html
+++ b/site/index.html
@@ -3453,6 +3453,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-11-22</p>
 <ul>
 <li>修复webui 智谱AI部分配置无法保存的bug</li>
+<li>点歌模式命令改为多命令形式</li>
 </ul>
 </li>
 <li>
