--- a/site/index.html
+++ b/site/index.html
@@ -2097,6 +2097,9 @@
 <p class="admonition-title">License</p>
 <p>这个项目采用 GNU通用公共许可证（GPL） 进行许可。有关详细信息，请参阅 LICENSE 文件。  </p>
 <p>This project is licensed under the <code>GNU General Public License (GPL)</code>. Please see the <code>LICENSE</code> file for more details.  </p>
+</div>
+<div class="admonition danger">
+<p class="admonition-title">注意</p>
 <p>严禁将此项目用于一切违反《中华人民共和国宪法》，《中华人民共和国刑法》，《中华人民共和国治安管理处罚法》和《中华人民共和国民法典》之用途。  </p>
 <p>严禁用于任何政治相关用途。</p>
 </div>
