--- a/site/index.html
+++ b/site/index.html
@@ -3500,6 +3500,16 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-26</p>
+<ul>
+<li>升级备份脚本，补充遗漏的out文件夹，改备份为强制覆盖</li>
+<li>优化talk部分源码</li>
+<li>tts请求新增请求超时，默认60s</li>
+<li>接入langchain_chatchat</li>
+<li>chatgpt兼容0.x.x和1.x.x版本</li>
+</ul>
+</li>
+<li>
 <p>2023-11-22</p>
 <ul>
 <li>修复webui 智谱AI部分配置无法保存的bug</li>
