--- a/site/index.html
+++ b/site/index.html
@@ -3218,14 +3218,14 @@ if __name__ == "__main__":
 <p>官网：<a href="//yiyan.baidu.com">yiyan.baidu.com</a>  </p>
 <ul>
 <li>
-<p>api
-    百度智能云千帆大模型平台：<a href="https://cloud.baidu.com/product/wenxinworkshop">https://cloud.baidu.com/product/wenxinworkshop</a>  </p>
+<p>api</p>
+<p>百度智能云千帆大模型平台：<a href="https://cloud.baidu.com/product/wenxinworkshop">https://cloud.baidu.com/product/wenxinworkshop</a>  </p>
 <p>API文档：<a href="https://cloud.baidu.com/doc/WENXINWORKSHOP/s/jlil56u11">https://cloud.baidu.com/doc/WENXINWORKSHOP/s/jlil56u11</a>  </p>
 <p><a href="https://console.bce.baidu.com/qianfan/ais/console/onlineService">在线服务</a>，购买<code>ERNIE-Bot大模型公有云在线调用服务</code>，<a href="https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application">应用接入</a> 创建应用，获取<code>API Key</code>和<code>Secret Key</code>，配置即可。</p>
 </li>
 <li>
-<p>web
-    服务端：<a href="//github.com/zhuweiyou/yiyan-api">yiyan-api</a>  </p>
+<p>web</p>
+<p>服务端：<a href="//github.com/zhuweiyou/yiyan-api">yiyan-api</a>  </p>
 <p>下载yiyan-api源码，根据官方教程部署搭建运行即可。简述过程就是安装Node.js &gt;= 18，然后再源码项目文件夹内运行<code>npm install</code>，最后运行<code>npm start</code>即可。  </p>
 <p>cookie 获取方式：</p>
 <p>访问 <code>yiyan.baidu.com</code>，登录账号  </p>
@@ -3518,7 +3518,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>tts请求新增请求超时，默认60s</li>
 <li>接入langchain_chatchat</li>
 <li>chatgpt兼容0.x.x和1.x.x版本</li>
-<li>接入文心一言官方API（）</li>
+<li>接入文心一言官方API</li>
 </ul>
 </li>
 <li>
