--- a/site/index.html
+++ b/site/index.html
@@ -2123,7 +2123,7 @@
 <li><code>utils</code> 文件夹，存储聊天、音频、通用类相关功能的封装实现</li>
 <li><code>data</code> 文件夹，存储数据文件、违禁词、文案等</li>
 <li><code>log</code> 文件夹，存储运行日志、字幕日志等</li>
-<li><code>out</code> 文件夹，存储edge-tts输出的音频文件，文案输出的音频文件</li>
+<li><code>out</code> 文件夹，存储TTS、SVC输出的音频文件，文案输出的音频文件</li>
 <li><code>Live2D</code> 文件夹，存储Live2D源码及模型</li>
 <li><code>song</code> 文件夹，存储点歌模式的歌曲</li>
 <li><code>docs</code> 文件夹，存储项目相关文档</li>
