--- a/site/index.html
+++ b/site/index.html
@@ -3511,6 +3511,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-27</p>
+<ul>
+<li>聊天模式 支持动态修改语音识别相关配置，从而实现多语言识别；config类删除单例（待测试）</li>
+</ul>
+</li>
+<li>
 <p>2023-11-26</p>
 <ul>
 <li>升级备份脚本，补充遗漏的out文件夹，改备份为强制覆盖</li>
