--- a/site/index.html
+++ b/site/index.html
@@ -3511,6 +3511,20 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-11-29</p>
+<ul>
+<li>文案页 支持增删文案组</li>
+<li>talk 后移线程到麦克风监听后，规避麦克风监听异常的bug</li>
+<li>优化tts异常日志</li>
+</ul>
+</li>
+<li>
+<p>2023-11-28</p>
+<ul>
+<li>聊天模式 补充动态文案、定时任务、闲时任务的触发功能 </li>
+</ul>
+</li>
+<li>
 <p>2023-11-27</p>
 <ul>
 <li>聊天模式 支持动态修改语音识别相关配置，从而实现多语言识别；config类删除单例（待测试）</li>
