--- a/site/index.html
+++ b/site/index.html
@@ -3511,6 +3511,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-1</p>
+<ul>
+<li>智谱AI 新增chatglm_turbo</li>
+</ul>
+</li>
+<li>
 <p>2023-11-29</p>
 <ul>
 <li>文案页 支持增删文案组</li>
